--- a/tienda/app/views/layouts/store.html.erb
+++ b/tienda/app/views/layouts/store.html.erb
@@ -16,10 +16,10 @@
       <div id="cart">
       <%= render(:partial => "cart" , :object => @cart) %>
       </div>
-      <!--<a href="http://www....">Home</a><br />
-      <a href="http://www..../faq">Questions</a><br />
+      <a href="http://www....">Home</a><br />
+      <a href="http://www..../faq">Usuario</a><br />
       <a href="http://www..../news">News</a><br />
-      <a href="http://www..../contact">Contact</a><br />-->
+      <a href="http://www..../contact">Contact</a><br />
     </div>
     <div id="main">
       <% if flash[:notice] -%>
