--- a/tienda/app/views/store/comprar.html.erb
+++ b/tienda/app/views/store/comprar.html.erb
@@ -1,7 +1,2 @@
-<tr>
-  <td><%= cart_item.quantity %>&times;</td>
-  <td><%=h cart_item.title %></td>
-  <td class="item-price"><%= number_to_currency(cart_item.price) %></td>
-</tr>
-
-<%= button_to "Empty cart" , :action => :empty_cart %>
+<h1>Listing articulos a Comprar</h1>
+<h1>Comprado</h1>
