--- a/tienda/public/stylesheets/depot.css
+++ b/tienda/public/stylesheets/depot.css
@@ -206,8 +206,7 @@ h1 {
   color:       white;
 }
 #ca rt table {
-                   1px dotted #595 ;
-  border-top:
+  border-top: 1px dotted #595 ;
   border-bottom: 1px dotted #595 ;
   margin-bottom: 10px;
 }
