--- a/tienda/app/views/articulos/index.html.erb
+++ b/tienda/app/views/articulos/index.html.erb
@@ -3,6 +3,7 @@
 <br/>
 <br/>
 <br/>
+<br/>
 <%= " | #{link_to("Usuario ", users_path)}" if current_user.admin? %>| <%= link_to(" Salir ", '/logout') %>|<%= link_to ' New articulo ', new_articulo_path %>|
 <h1>Tus articulos</h1>
 <table>
@@ -19,9 +20,9 @@
     <td><%=h articulo.descripcion %></td>
     <td><%=h articulo.precio %></td>
     <td><%=h articulo.cantidad %></td>
-    <td><%= link_to 'Show', articulo %></td>
-    <td><%= link_to 'Edit', edit_articulo_path(articulo) %></td>
-    <td><%= link_to 'Destroy', articulo, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Shows', articulo %></td>
+    <td><%= link_to 'Edits', edit_articulo_path(articulo) %></td>
+    <td><%= link_to 'Destroys', articulo, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
